[gd_scene load_steps=2 format=3 uid="uid://tc7x0v0vft6w"]

[ext_resource type="Script" uid="uid://bdmxf8q2bbmvs" path="res://Scripts/Events/event_8.gd" id="1_4nxqv"]

[node name="Event8" type="Node2D"]
script = ExtResource("1_4nxqv")

[node name="AdvisorSprite" type="Sprite2D" parent="."]

[node name="DialoguePanel" type="Panel" parent="."]
offset_left = 523.0
offset_top = 794.0
offset_right = 1473.0
offset_bottom = 1133.0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -127.5
offset_right = 408.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="DecisionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 527.0
offset_top = 550.0
offset_right = 1470.0
offset_bottom = 771.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -33.0
offset_right = 82.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="InvestigateButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Vi må finne ut av hvem som er skyldig. Sett i gang en etterforskning med det samme!"

[node name="RetaliateButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Ild mot ild! Gå til angrep mot de vi mistenker. Vi har ikke tid å miste."

[node name="SupportButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Det som gjelder nå er å støtte de rammede. Send hjelp til ofrene og deres familier."

[node name="IgnoreButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Vi kan ikke la oss påvirke av terrorister. Ofrene kommer over dette med tiden. Vi trenger ikke gjøre noe."

[node name="FerdigKnapp" type="Button" parent="DecisionPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -84.5
offset_right = 136.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Ferdig"

[connection signal="pressed" from="DecisionPanel/VBoxContainer/InvestigateButton" to="." method="_on_investigate_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/RetaliateButton" to="." method="_on_retaliate_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/SupportButton" to="." method="_on_support_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/IgnoreButton" to="." method="_on_ignore_button_pressed"]
[connection signal="pressed" from="DecisionPanel/FerdigKnapp" to="." method="_on_ferdig_knapp_pressed"]
